--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
       h1{
          color: blue;
       }
+
+      p{
+         color: pink;
+         font-size: 30px;
+      }
    </style>
 </head>
 <body>
