--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
    <title>Document</title>
 
    <style>
+
       h1{
          color: blue;
       }
@@ -19,6 +20,7 @@
 <body>
    <p>welcome</p>
    <h1>Hello Natty</h1>
+   <h2>feature1</h2>
 </body>
 </html>
 
